이코테_구현

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,27 +2,123 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ADDIJJJKKLSS20\n"
+      "2a2ba3c\n",
+      "aabbaccc\n",
+      "aabbaccc\n",
+      "aabbaccc\n"
      ]
     }
    ],
    "source": [
-    "# 구현 _ 문자열 재정렬\n",
-    "import re\n",
+    "# 이코테 _ 구현 _ 문자열 압축\n",
     "\n",
-    "s = input()\n",
-    "num = 0\n",
-    "for i in re.findall('\\d',s):\n",
-    "    num += int(i)\n",
-    "s = ''.join(sorted(re.findall('\\D',s)))\n",
-    "print(f'{s}{num}')\n"
+    "s = \"aabbaccc\"\n",
+    "\n",
+    "def solution(s):\n",
+    "    answer = len(s)\n",
+    "    compressed = ''\n",
+    "    \n",
+    "    for word in range(1, len(s)//2 + 1):\n",
+    "        compressed = ''\n",
+    "        count = 1\n",
+    "        before = s[0:word]\n",
+    "\n",
+    "        for j in range(word, len(s), word):\n",
+    "            if before == s[j:j+word]:\n",
+    "                count += 1\n",
+    "\n",
+    "            else:\n",
+    "                compressed += str(count) + before if count >= 2 else before\n",
+    "                count = 1\n",
+    "\n",
+    "        compressed += str(count) + before if count >= 2 else before\n",
+    "    \n",
+    "    return answer "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[[10, 7, 4, 1], [11, 8, 5, 2], [12, 9, 6, 3]]"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 이코테 _ 구현 _ 자물쇠와 열쇠\n",
+    "# 복습 - \n",
+    "\n",
+    "# 2차원 리스트 90도 회전\n",
+    "def rotate_a_matrix_by_90_degree(a):\n",
+    "    n = len(a) # 행 길이 계산\n",
+    "    m = len(a[0]) # 열 길이 계산\n",
+    "    result = [[0] * n for _ in range(m)] # 결과 리스트\n",
+    "    print(result)\n",
+    "    for i in range(n):\n",
+    "        for j in range(m):\n",
+    "            result[j][n - i - 1] = a[i][j]\n",
+    "    return result\n",
+    "\n",
+    "# 자물쇠의 중간 부분이 모두 1인지 확인\n",
+    "def check(new_lock):\n",
+    "    lock_length = len(new_lock) // 3\n",
+    "    for i in range(lock_length, lock_length * 2):\n",
+    "        for j in range(lock_length, lock_length * 2):\n",
+    "            if new_lock[i][j] != 1:\n",
+    "                return False\n",
+    "            return True\n",
+    "\n",
+    "def solution(key, lock):\n",
+    "    n = len(lock)\n",
+    "    m = len(key)\n",
+    "    # 자물쇠의 크기를 기존의 3배로 변환\n",
+    "    new_lock = [[0] * (n * 3) for _ in range(n * 3)]\n",
+    "    # 새로운 자물쇠의 중앙 부분에 자물쇠 넣기\n",
+    "    for i in range(n):\n",
+    "        for j in range(n):\n",
+    "            new_lock[i + n][j + n] = lock[i][j]\n",
+    "\n",
+    "    # 4가지 방향에 대해서 확인\n",
+    "\n",
+    "    for rotation in range(4):\n",
+    "        key = rotate_a_matrix_by_90_degree(key) # 열쇠 회전\n",
+    "        for x in range(n * 2):\n",
+    "            for y in range(n * 2):\n",
+    "                # 자물쇠에 열쇠를 끼워 넣기\n",
+    "                for i in range(m):\n",
+    "                    for j in range(m):\n",
+    "                        new_lock[x + i][y + j] += key[i][j]\n",
+    "                # 새로운 자물쇠에 열쇠가 정확히 들어맞는지 검사\n",
+    "                if check(new_lock) == True:\n",
+    "                    return True\n",
+    "                # 자물쇠에서 열쇠를 다시 빼기\n",
+    "                for i in range(m):\n",
+    "                    for j in range(m):\n",
+    "                        new_lock[x + i][y + j] -= key[i][j]\n",
+    "\n",
+    "    return False"
    ]
   }
  ],
