--- a/test.ipynb
+++ b/test.ipynb
@@ -68,7 +68,7 @@
    ],
    "source": [
     "# 이코테 _ 구현 _ 자물쇠와 열쇠\n",
-    "# 복습 - \n",
+    "# 복습 - 금\n",
     "\n",
     "# 2차원 리스트 90도 회전\n",
     "def rotate_a_matrix_by_90_degree(a):\n",
@@ -89,7 +89,7 @@
     "            if new_lock[i][j] != 1:\n",
     "                return False\n",
     "        return True\n",
-    "\n",
+    "    \n",
     "def solution(key, lock):\n",
     "    n = len(lock)\n",
     "    m = len(key)\n",
@@ -119,6 +119,26 @@
     "                        new_lock[x + i][y + j] -= key[i][j]\n",
     "\n",
     "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 6\n",
+    "\n",
+    "game = [[0] * n for _ in range(n)]\n",
+    "print(game)"
    ]
   }
  ],
