--- a/test.ipynb
+++ b/test.ipynb
@@ -123,14 +123,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0]]\n"
+      "[[1, 0, 0, 0, 0, 0], [0, 0, 0, 0, 'apple', 0], [0, 0, 0, 'apple', 0, 0], [0, 0, 0, 0, 0, 0], [0, 0, 'apple', 0, 0, 0], [0, 0, 0, 0, 0, 0]]\n"
      ]
     }
    ],
@@ -138,7 +138,40 @@
     "n = 6\n",
     "\n",
     "game = [[0] * n for _ in range(n)]\n",
-    "print(game)"
+    "# print(game)\n",
+    "\n",
+    "# k = int(input())\n",
+    "k = 3\n",
+    "\n",
+    "# 사과 표시 _ game에 사과 위치를 1로 표시\n",
+    "# for _ in range(k):\n",
+    "#     a, b = map(int, input().split())\n",
+    "#     game[a-1][b-1] = 'apple'\n",
+    "\n",
+    "\n",
+    "# 사과가 있는 게임\n",
+    "game = [[0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 'apple', 0], [0, 0, 0, 'apple', 0, 0], [0, 0, 0, 0, 0, 0], [0, 0, 'apple', 0, 0, 0], [0, 0, 0, 0, 0, 0]]\n",
+    "game[0][0] = 1\n",
+    "head = game[0][0] # 뱀이 처음 있을 위치\n",
+    "\n",
+    "print(game)\n",
+    "# l = int(input())\n",
+    "l = 3\n",
+    "# direct = [] # 회전 방향을 담을 리스트\n",
+    "# for _ in range(l):\n",
+    "#     a, b = map(str, input().split())\n",
+    "#     direct.append((int(a), b))\n",
+    "\n",
+    "direct = [(3, 'D'), (15, 'L'), (17, 'D')]\n",
+    "\n",
+    "# 게임이 몇 초에 끝나는지 출력\n",
+    "\n",
+    "tail = 0\n",
+    "cnt = 0\n",
+    "now = 0\n",
+    "while head != tail:\n",
+    "    for i in range(direct[now][0]):\n",
+    "        if direct[now][1] == 'D':\n"
    ]
   }
  ],
