--- a/test.ipynb
+++ b/test.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -135,38 +135,19 @@
       "i 0\n",
       "[[1, 0, 0, 0, 0, 0], [1, 0, 0, 0, 'apple', 0], [1, 0, 0, 'apple', 0, 0], [0, 0, 0, 0, 0, 0], [0, 0, 'apple', 0, 0, 0], [0, 0, 0, 0, 0, 0]]\n",
       "noww 3\n",
-      "head (3, 0)\n",
       "i 1\n",
-      "j 0\n",
-      "noww 3\n",
-      "head (3, 1)\n",
-      "j 1\n",
-      "noww 3\n",
-      "head (3, 2)\n",
-      "j 2\n",
-      "noww 3\n",
-      "head (3, 3)\n",
-      "j 3\n",
-      "noww 3\n",
-      "head (3, 4)\n",
-      "j 4\n",
-      "noww 3\n",
-      "head (3, 5)\n",
-      "j 5\n",
-      "noww 3\n",
-      "head (3, 6)\n",
-      "j 6\n"
+      "j 0\n"
      ]
     },
     {
      "ename": "IndexError",
-     "evalue": "list assignment index out of range",
+     "evalue": "list index out of range",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/Users/songy/Documents/Codes/Algorithm/test.ipynb Cell 3'\u001b[0m in \u001b[0;36m<cell line: 37>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/songy/Documents/Codes/Algorithm/test.ipynb#ch0000002?line=50'>51</a>\u001b[0m \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(direct[i][\u001b[39m0\u001b[39m]):\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/songy/Documents/Codes/Algorithm/test.ipynb#ch0000002?line=51'>52</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mj\u001b[39m\u001b[39m\"\u001b[39m, j)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/songy/Documents/Codes/Algorithm/test.ipynb#ch0000002?line=52'>53</a>\u001b[0m     game[noww][nowh] \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/songy/Documents/Codes/Algorithm/test.ipynb#ch0000002?line=53'>54</a>\u001b[0m     nowh \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/songy/Documents/Codes/Algorithm/test.ipynb#ch0000002?line=54'>55</a>\u001b[0m     cnt \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list assignment index out of range"
+      "\u001b[1;32m/Users/songy/Documents/Codes/Algorithm/test.ipynb Cell 3'\u001b[0m in \u001b[0;36m<cell line: 38>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/songy/Documents/Codes/Algorithm/test.ipynb#ch0000002?line=55'>56</a>\u001b[0m nowh \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/songy/Documents/Codes/Algorithm/test.ipynb#ch0000002?line=56'>57</a>\u001b[0m cnt \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/songy/Documents/Codes/Algorithm/test.ipynb#ch0000002?line=57'>58</a>\u001b[0m head \u001b[39m=\u001b[39m [noww][nowh]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/songy/Documents/Codes/Algorithm/test.ipynb#ch0000002?line=58'>59</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mnoww\u001b[39m\u001b[39m\"\u001b[39m, noww)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/songy/Documents/Codes/Algorithm/test.ipynb#ch0000002?line=59'>60</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mhead\u001b[39m\u001b[39m\"\u001b[39m, head)\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
@@ -193,6 +174,7 @@
     "noww = 0 # 현재 행 위치\n",
     "nowh = 0 # 현재 열 위치\n",
     "head = game[noww][nowh] # 뱀이 처음 있을 위치\n",
+    "before = game[noww][nowh]\n",
     "print(head)\n",
     "print(game)\n",
     "# l = int(input())\n",
@@ -212,53 +194,26 @@
     "        print(\"i\", i)\n",
     "        if direct[i][1] == 'D':\n",
     "            for j in range(direct[i][0]):\n",
+    "                tail = [noww][nowh]\n",
     "                game[noww][nowh] = 1\n",
-    "\n",
     "                noww += 1\n",
     "                cnt += 1\n",
-    "                head = (noww, nowh)\n",
+    "                head = [noww][nowh]\n",
     "            print(game)\n",
     "            print(\"noww\", noww)\n",
-    "            print(\"head\", head)\n",
     "        elif direct[i][1] == 'L':\n",
     "            for j in range(direct[i][0]):\n",
     "                print(\"j\", j)\n",
+    "                if game[noww][nowh] != 'apple':\n",
+    "                    before = 0\n",
     "                game[noww][nowh] = 1\n",
     "                nowh += 1\n",
     "                cnt += 1\n",
-    "                head = (noww, nowh)\n",
+    "                head = [noww][nowh]\n",
     "                print(\"noww\", noww)\n",
     "                print(\"head\", head)\n",
-    "            print(game)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[0, 1, 1, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 'apple', 0],\n",
-       " [0, 0, 0, 'apple', 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0],\n",
-       " [0, 0, 'apple', 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0]]"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "t = [[0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 'apple', 0], [0, 0, 0, 'apple', 0, 0], [0, 0, 0, 0, 0, 0], [0, 0, 'apple', 0, 0, 0], [0, 0, 0, 0, 0, 0]]\n",
-    "\n",
-    "t[0][1] = 1\n",
-    "t[0][2] = 1\n",
-    "t"
+    "            print(game)\n",
+    "print(game)"
    ]
   }
  ],
