--- a/test.ipynb
+++ b/test.ipynb
@@ -215,6 +215,43 @@
     "            print(game)\n",
     "print(game)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 4, 1, 1, 2, 1, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 정확성 테스트 통과, 효율성 테스트 0점\n",
+    "\n",
+    "prices = [1, 2, 3, 2, 3]\n",
+    "\n",
+    "answer = []\n",
+    "\n",
+    "while prices:\n",
+    "    now = prices.pop(0)\n",
+    "    cnt = 1\n",
+    "    for i in range(len(prices)):\n",
+    "        if now > prices[i]:\n",
+    "            answer.append(cnt)\n",
+    "            break\n",
+    "        elif i == len(prices)-1:\n",
+    "            answer.append(cnt)\n",
+    "        else:\n",
+    "            cnt += 1\n",
+    "\n",
+    "answer.append(0)\n",
+    "\n",
+    "print(answer)"
+   ]
   }
  ],
  "metadata": {
