--- a/test.ipynb
+++ b/test.ipynb
@@ -252,6 +252,89 @@
     "\n",
     "print(answer)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5, 3, 7, 2, 3], [3, 7, 1, 6, 1], [7, 2, 5, 3, 4], [4, 3, 6, 4, 1], [8, 7, 3, 5, 2]]\n",
+      "[[0, 0, 0, 0, 0, 0, 0], [0, 5, 3, 7, 2, 3, 0], [0, 3, 7, 1, 6, 1, 0], [0, 7, 2, 5, 3, 4, 0], [0, 4, 3, 6, 4, 1, 0], [0, 8, 7, 3, 5, 2, 0], [0, 0, 0, 0, 0, 0, 0]]\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "8\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Inflearn _ Section 3 봉우리\n",
+    "# n = int(input())\n",
+    "dx = [-1, 0, 1 ,0] # 좌, 우\n",
+    "dy = [0, 1, 0, -1] # 상, 하\n",
+    "array = [list(map(int, input().split())) for _ in range(n)]\n",
+    "\n",
+    "# 지도 가장자리에 0 초기화\n",
+    "array.insert(0, [0] * n) # 0번 열에 [0] * n 삽입\n",
+    "array.append([0] * n) # n+1번 열에 [0] * n 추가\n",
+    "\n",
+    "for x in array:\n",
+    "    x.insert(0, 0) # 행의 0번째에 0 삽입\n",
+    "    x.append(0) # 행의 n+1번째에 0 추가\n",
+    "print(array)\n",
+    "\n",
+    "cnt = 0 # 회수 초기화\n",
+    "\n",
+    "for i in range(1, n+1):\n",
+    "    for j in range(1, n+1):\n",
+    "        if all(array[i][j] > array[i+dx[k]][j+dy[k]] for k in range(4)):# 행과 열 (상하좌우) 확인 - 모두가 참일 때 all이 참\n",
+    "            cnt += 1\n",
+    "    print(cnt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 0, 0, 0, 0, 0, 0], [0, 5, 3, 7, 2, 3, 0], [0, 3, 7, 1, 6, 1, 0], [0, 7, 2, 5, 3, 4, 0], [0, 4, 3, 6, 4, 1, 0], [0, 8, 7, 3, 5, 2, 0], [0, 0, 0, 0, 0, 0, 0]]\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 5\n",
+    "dx = [-1, 0, 1, 0] # 좌, 우\n",
+    "dy = [0, 1, 0, -1] # 상, 하\n",
+    "\n",
+    "array = [[5, 3, 7, 2, 3], [3, 7, 1, 6, 1], [7, 2, 5, 3, 4], [4, 3, 6, 4, 1], [8, 7, 3, 5, 2]]\n",
+    "array.insert(0, [0] * n )\n",
+    "array.append([0] * n)\n",
+    "\n",
+    "\n",
+    "for x in array:\n",
+    "    x.insert(0, 0)\n",
+    "    x.append(0)\n",
+    "\n",
+    "cnt = 0\n",
+    "print(array)\n",
+    "\n",
+    "for i in range(1, n+1):\n",
+    "    for j in range(1, n+1):\n",
+    "        if all(array[i][j] > array[i+dx[k]][j+dy[k]] for k in range(4)):\n",
+    "            cnt += 1\n",
+    "\n",
+    "print(cnt)"
+   ]
   }
  ],
  "metadata": {
