--- a/test.ipynb
+++ b/test.ipynb
@@ -299,41 +299,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0, 0, 0, 0, 0, 0, 0], [0, 5, 3, 7, 2, 3, 0], [0, 3, 7, 1, 6, 1, 0], [0, 7, 2, 5, 3, 4, 0], [0, 4, 3, 6, 4, 1, 0], [0, 8, 7, 3, 5, 2, 0], [0, 0, 0, 0, 0, 0, 0]]\n",
-      "10\n"
+      "YES\n",
+      "NO\n"
      ]
     }
    ],
    "source": [
-    "n = 5\n",
-    "dx = [-1, 0, 1, 0] # 좌, 우\n",
-    "dy = [0, 1, 0, -1] # 상, 하\n",
+    "# sdoku = [list(map(int, input().split())) for _ in range(9)]\n",
     "\n",
-    "array = [[5, 3, 7, 2, 3], [3, 7, 1, 6, 1], [7, 2, 5, 3, 4], [4, 3, 6, 4, 1], [8, 7, 3, 5, 2]]\n",
-    "array.insert(0, [0] * n )\n",
-    "array.append([0] * n)\n",
+    "def check(sdoku):\n",
     "\n",
+    "    for i in range(9):\n",
+    "        ch1 = [0] * 10\n",
+    "        ch2 = [0] * 10\n",
+    "        for j in range(9):\n",
+    "            ch1[sdoku[i][j]] = 1\n",
+    "            ch2[sdoku[i][j]] = 1\n",
+    "        if sum(ch1) != 9 or sum(ch2) != 9:\n",
+    "            return False\n",
+    "    \n",
+    "    for i in range(3):\n",
+    "        for j in range(3):\n",
+    "            ch3 = [0] * 10\n",
+    "            for k in range(3):\n",
+    "                for s in range(3):\n",
+    "                    ch3[sdoku[i * 3 + k][j * 3 + s]] = 1\n",
+    "            if sum(ch3) != 9:\n",
+    "                return False\n",
+    "    return True\n",
     "\n",
-    "for x in array:\n",
-    "    x.insert(0, 0)\n",
-    "    x.append(0)\n",
-    "\n",
-    "cnt = 0\n",
-    "print(array)\n",
-    "\n",
-    "for i in range(1, n+1):\n",
-    "    for j in range(1, n+1):\n",
-    "        if all(array[i][j] > array[i+dx[k]][j+dy[k]] for k in range(4)):\n",
-    "            cnt += 1\n",
-    "\n",
-    "print(cnt)"
+    "array = [list(map(int, input().split())) for _ in range(9)]\n",
+    "if check(array):\n",
+    "    print(\"YES\")\n",
+    "else:\n",
+    "    print(\"NO\")"
    ]
   }
  ],
