--- a/test.ipynb
+++ b/test.ipynb
@@ -341,6 +341,47 @@
     "else:\n",
     "    print(\"NO\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check(a):\n",
+    "    for i in range(9):\n",
+    "        ch1 = [0] * 10\n",
+    "        ch2 = [0] * 10\n",
+    "        for j in range(9):\n",
+    "            ch1[a[i][j]] = 1\n",
+    "            ch2[a[i][j]] = 1\n",
+    "        if sum(ch1) != 9 or sum(ch2) != 9:\n",
+    "            return False\n",
+    "    \n",
+    "    for i in range(3):\n",
+    "        for j in range(3):\n",
+    "            ch3 = [0] * 10\n",
+    "            for k in range(3):\n",
+    "                for s in range(3):\n",
+    "                    ch3[a[i * 3 + k][j * 3 + s]] = 1\n",
+    "                if sum(ch3) != 9:\n",
+    "                    return False\n",
+    "    return True\n",
+    "\n",
+    "a = [list(map(int, input().split())) for _ in range(9)]\n",
+    "\n",
+    "if check(a):\n",
+    "    print(\"YES\")\n",
+    "else:\n",
+    "    print(\"NO\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
