--- a/test.ipynb
+++ b/test.ipynb
@@ -381,7 +381,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import sys\n",
+    "board = [list(map(int, input().split())) for _ in range(7)]\n",
+    "cnt = 0\n",
+    "for i in range(3):\n",
+    "    for j in range(7):\n",
+    "        tmp = board[j][i:i+5]\n",
+    "        if tmp == tmp[::-1]:\n",
+    "            cnt += 1\n",
+    "        for k in range(2):\n",
+    "            if board[i+k][j]!=board[i+5-k-1][j]:\n",
+    "                break\n",
+    "        else:\n",
+    "            cnt += 1\n",
+    "\n",
+    "print(cnt)"
+   ]
   }
  ],
  "metadata": {
